[metadata]
name = statistics-y-plot
version = 0.1.1
author = Jenny Wang
author_email = 772159842@qq.com
description = A Python package for statistical analysis and visualization of repeated-measure data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JennyWangw/statistics_Y_plot
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pandas
    matplotlib
    scipy
    seaborn
    statsmodels
